# mspec

./: .gitignore  README.md  __val.json  push_to_github.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.harness/: memory.json  plan.md  spec.md
.harness/runs/: 0aa5e632.json  1d127c54.json  3a2e3ad8.json  41077d8d.json  448cbddc.json  47e86733.json  678dbfb7.json  8c9cd798.json  906447ce.json  974c3d92.json  a8e78133.json  a9b78d97.json  a9f3390b.json  ce84222e.json  d08bd1f2.json  da84f86c.json  e70ff294.json  f303365d.json  f4620628.json
src/: cli.py  config.py  config.yaml  opencode_config.py  registry.py
src/agents/: executor.py  opencode_client.py  prompts.py  router.py
src/dashboard/: _run_reasonix_silent.py
src/dashboard/api/: app.py  reasonix_runner.py  routes.py  tasks.py
src/dashboard/frontend/: index.html  package-lock.json  package.json
src/dashboard/frontend/src/: App.jsx  index.css  main.jsx
src/dashboard/frontend/src/components/: Layout.jsx
src/dashboard/frontend/src/pages/: Home.jsx  (+11 more)
src/git/: manager.py
src/lms/: client.py
src/memory/: compactor.py  embedder.py  manager.py
src/mspec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stubs/: BP-01-scaffold.md  BP-02-data_models.md  TEMPLATE.md  __init__.py  quality.py  run_history.json  runner.py  validate.py
src/utils/: project_scaffold.py
tests/: conftest.py  test_agents.py  test_dashboard.py  test_embedder.py  test_executor.py  test_frontend.py  test_git.py  test_import.py  test_memory.py  test_retrofit.py  test_stubs.py
(+1 files in other folders)
