[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mspec"
version = "0.1.0"
description = "Spec-driven local harness system — multi-agent code generation with LM Studio"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "PyYAML>=6.0",
    "typer>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "httpx>=0.24",
    "uvicorn>=0.24",
    "jinja2>=3.1",
]

[project.scripts]
harness = "cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dashboard", "dashboard.*", "agents", "agents.*", "memory", "memory.*", "git", "git.*", "lms", "lms.*", "utils", "utils.*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
